[FIX] Many of the weird overflow issues

--- a/app/assets/stylesheets/briarcliff/_sections.scss
+++ b/app/assets/stylesheets/briarcliff/_sections.scss
@@ -6,16 +6,26 @@ section {
   background-color: white;
 }
 
-
-// All this wizardry is to make the borders rounder.
-.box > *:first-child {
+// All this wizardry is to make only the correct borders round.
+// As you can see, .section-info requires some special treatment.
+.box > section:first-child:not(.section-info), .box > a:first-child > section:not(.section-info), .box > a:first-child > .box-image--container {
   overflow: hidden;
   display: block;
   border-top-left-radius: $border-radius-size;
   border-top-right-radius: $border-radius-size;
 }
 
-.box > *:last-child {
+.box > section.section-info:first-child, .box > a:first-child  > section.section-info{
+  border-top-left-radius: $border-radius-size;
+  border-top-right-radius: $border-radius-size;
+
+  .details-part--type {
+    border-top-left-radius: $border-radius-size;
+  }
+}
+
+//.box > section:last-child, .box > a:last-child > section{
+.box > section:last-child {
   overflow: hidden;
   display: block;
   border-bottom-left-radius: $border-radius-size;
@@ -26,6 +36,7 @@ section {
   height: $info—bar-height;
   background-color: $g00;
   padding: 0;
+  position: relative;
 
   span {
     font-size: .8em;
@@ -47,7 +58,7 @@ section {
   text-transform: uppercase;
   display: block;
   width: 100%;
-  // May interfere with overflow:hidden!
+  // May interfere with overflow:hidden! But if removed, it places the info section always at the top.
   position: absolute;
   top: 0;
   left: 0;
@@ -56,12 +67,12 @@ section {
   height: $info—bar-height;
 }
 
-.details-parts {
+.details-parts, .details-part {
   display: inline-block;
+  vertical-align: top;
 }
 
 .details-part{
-  display: inline-block;
   padding: 0 .5em;
   height: 100%;
   line-height: 1.3em;
@@ -72,7 +83,6 @@ section {
 }
 
 .details-part--type{
-  border-top-left-radius: $border-radius-size;
   color: white;
   padding-left: 1.2em;
   padding-right: 1.2em;
